--- a/build.xml
+++ b/build.xml
@@ -116,7 +116,7 @@ This is the default build target.
 
 Do not run `docs` for now. Generating documentation eats up memory and build
 time and is largely obsolete when using GitHub. -->
-  <target name="build" depends="echo_hello" />
+  <target name="build" depends="echo_hello">
     <echo>Cool!</echo>
   </target>
 
