--- a/build.xml
+++ b/build.xml
@@ -166,7 +166,7 @@ time and is largely obsolete when using GitHub. -->
        </pdo>
   </target>  
 
-  <target name="drupal_setting_file" description="Copy drupal settings file">
+  <target name="drupal_setting_file" depend="drupal_settings_clean" description="Copy drupal settings file">
     <copy file="build/files/${project.drupal.settings.file}" 
       tofile="${project.drupal.settings.path}${project.drupal.settings.file}" overwrite="true">
       <filterchain>
@@ -179,6 +179,16 @@ time and is largely obsolete when using GitHub. -->
       </filterchain>
     </copy>    
   </target>  
+
+  <target name="drupal_settings_clean" description="Delete settings file if exist">
+    <if>
+      <available file="${project.drupal.settings.file}" type="${project.drupal.settings.path}" />
+      <then>
+        <delete file="${project.drupal.settings.path}${project.drupal.settings.file}" quiet='true' />
+        <echo>Delete settings.php file</echo>
+      </then>
+    </if>
+  </target>
 
   <target name="drake_install" description="Install drake migration">
     <drush command="pm-enable" assume="yes">
