--- a/build.xml
+++ b/build.xml
@@ -166,7 +166,7 @@ time and is largely obsolete when using GitHub. -->
        </pdo>
   </target>  
 
-  <target name="drupal_setting_file" depend="drupal_settings_clean" description="Copy drupal settings file">
+  <target name="drupal_setting_file" depends="drupal_settings_clean" description="Copy drupal settings file">
     <copy file="build/files/${project.drupal.settings.file}" 
       tofile="${project.drupal.settings.path}${project.drupal.settings.file}" overwrite="true">
       <filterchain>
