--- a/build.xml
+++ b/build.xml
@@ -167,8 +167,7 @@ time and is largely obsolete when using GitHub. -->
   </target>  
 
   <target name="drupal_setting_file" depends="drupal_settings_clean" description="Copy drupal settings file">
-    <copy file="build/files/${project.drupal.settings.file}" 
-      tofile="${project.drupal.settings.path}${project.drupal.settings.file}" overwrite="true">
+    <copy file="build/files/${project.drupal.settings.file}" tofile="${project.drupal.settings.path}${project.drupal.settings.file}" overwrite="true">
       <filterchain>
         <replacetokens begintoken="%%" endtoken="%%">
           <!-- MySQL TOKENS -->
@@ -184,6 +183,7 @@ time and is largely obsolete when using GitHub. -->
     <if>
       <available file="${project.drupal.settings.path}${project.drupal.settings.file}" />
       <then>
+        <chmod dir="${project.drupal.settings.path}" perm="777" />
         <delete file="${project.drupal.settings.path}${project.drupal.settings.file}" quiet='true' />
         <echo>Delete settings.php file</echo>
       </then>
