--- a/build.xml
+++ b/build.xml
@@ -166,17 +166,8 @@ time and is largely obsolete when using GitHub. -->
        </pdo>
   </target>  
 
-  <target name="drupal_setting_file" depends="drupal_settings_clean" description="Copy drupal settings file">
-    <copy file="build/files/${project.drupal.settings.file}" tofile="${project.drupal.settings.path}${project.drupal.settings.file}" overwrite="true">
-      <filterchain>
-        <replacetokens begintoken="%%" endtoken="%%">
-          <!-- MySQL TOKENS -->
-          <token key="db_name" value="${db.mysql.name}" />
-          <token key="db_username" value="${db.mysqluser}" />
-          <token key="db_password" value="${db.mysql.password}" />
-        </replacetokens>
-      </filterchain>
-    </copy>    
+  <target name="drupal_setting_file" depends="drupal_settings_clean, drupal_settings_copy" description="Create drupal settings file">
+    <echo>Copy settings.php file</echo>      
   </target>  
 
   <target name="drupal_settings_clean" description="Delete settings file if exist">
@@ -188,6 +179,19 @@ time and is largely obsolete when using GitHub. -->
         <echo>Delete settings.php file</echo>
       </then>
     </if>
+  </target>
+
+  <target name="drupal_settings_copy" description="Copy settings file if exist">
+    <copy file="build/files/${project.drupal.settings.file}" tofile="${project.drupal.settings.path}${project.drupal.settings.file}" overwrite="true">
+      <filterchain>
+        <replacetokens begintoken="%%" endtoken="%%">
+          <!-- MySQL TOKENS -->
+          <token key="db_name" value="${db.mysql.name}" />
+          <token key="db_username" value="${db.mysqluser}" />
+          <token key="db_password" value="${db.mysql.password}" />
+        </replacetokens>
+      </filterchain>
+    </copy>
   </target>
 
   <target name="drake_install" description="Install drake migration">
