--- a/build.xml
+++ b/build.xml
@@ -288,6 +288,23 @@ root directory. -->
     </if>
   </target>
 
+  <target name="setup-git-repo">
+    <!-- Only clone if repository does not exist already -->
+    <if>
+      <not><available file="${repo.dir}" /></not>
+      <then>
+        <!-- Set revision to HEAD if not already defined -->
+        <property name="repo.revision" value="HEAD" override="false"/>
+
+        <echo>Cloning ${repo.url} ${repo.revision} into ${repo.dir}</echo>
+        <!-- The [`gitclone` task](http://www.phing.info/docs/guide/stable/chapters/appendixes/AppendixC-OptionalTasks.html#GitCloneTask)
+             does not seem to work. Use exec instead. -->
+        <exec command="git clone ${repo.url} ${repo.dir}" />
+        <exec command="git checkout ${repo.revision}" dir="${repo.dir}"/>
+      </then>
+    </if>
+  </target>
+
   <target name="db_create">
     <echo>Create project database</echo>
     <pdo url="${db.mysql.driver}:host=${db.mysql.host}" userId="${db.mysql.user}" password="${db.mysql.password}" onerror="abort">
